# sdek-thp

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/: benefits.txt  deadlines.txt  france_rules.txt  general_info.txt  germany_rules.txt
src/app/: main.py
src/app/api/: chat.py  deps.py
src/app/core/: settings.py
src/app/models/: chat.py  document.py  query_analysis.py
src/app/services/: chat.py  query_analyzer.py  retriever.py
src/app/services/llm/: __init__.py  base.py  fake.py  openai_compatible.py  service_factory.py
src/app/workflows/: chat_workflow.py
