[project]
name = "sdek-thp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["fastapi[standard]>=0.136.1", "langgraph>=1.1.9"]

[dependency-groups]
dev = [
    "prek>=0.3.11",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]
